[package]
name = "pseudoinstall"
version = "0.0.1"
authors = ["aizcutei <aiz.cutei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.4.0"
winapi = "0.3.8"
libc = "0.2.66"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["winuser", "handleapi", "processthreadsapi", "securitybaseapi"]}
